urls are now relative to root, stopped \n from being a whitespace

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,3 +12,7 @@
 #contentBox {
     padding-top: 1%;
 }
+
+#textSegment {
+    white-space:pre-wrap;
+}
