--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -2,6 +2,4 @@
     background-color: #efefef;
 }
 
-#homeText {
-    white-space:pre-wrap;
-}
+/*test segment in app.css*/
